# asian_option_pricer

./: .gitignore  AsianOptionAnalyzer.py  README.md  _run_test.py  _test_options.py  app.py  config.toml  pyproject.toml  requirements.txt
data/: database.py  fetch.py
features/: approyimation.py  calibration.py  payoff.py  plots.py  pricer.py  robustness.py  tree.py
src/analytics/: approximation.py  robustness.py
src/model/: binomial_tree.py  calibration.py  lattice.py  payoff.py  pricer.py
src/options/: classic.py  exotic.py  registry.py
src/visualization/: payoff_plot.py  plots.py  report.py  returns_plot.py  robustness_plot.py  surface_plot.py  tree_plot.py
tests/: test_calibration.py  tree_pricer.py
