[project]
name = "asian-option-pricer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.5.3",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
    "yfinance>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["data"]
